--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,14 +1,14 @@
 {
-  "CONTRACT_ADDRESS": "0x0b18b900F7375AABDa00EEaC988116C33fb05BD2",
-  "SCAN_LINK": "https://polygonscan.com/token/0x0b18b900F7375AABDa00EEaC988116C33fb05BD2",
+  "CONTRACT_ADDRESS": "0x018F558219b2923C83E4538704C587F02Afa35Cb",
+  "SCAN_LINK": "https://testnet.bscscan.com/address/0x018f558219b2923c83e4538704c587f02afa35cb",
   "NETWORK": {
-    "NAME": "Polygon",
-    "SYMBOL": "Matic",
-    "ID": 137
+    "NAME": "Binance Smart chain",
+    "SYMBOL": "BSC",
+    "ID": 97
   },
-  "NFT_NAME": "The Stripes NFT",
-  "SYMBOL": "TSNFT",
-  "MAX_SUPPLY": 992,
+  "NFT_NAME": "Highper Gold Card",
+  "SYMBOL": "HGC",
+  "MAX_SUPPLY": 100,
   "WEI_COST": 4000000000000000000,
   "DISPLAY_COST": 4,
   "GAS_LIMIT": 285000,
