--- a/public/config/config.json
+++ b/public/config/config.json
@@ -10,9 +10,9 @@
   "SYMBOL": "HGC",
   "MAX_SUPPLY": 100,
   "WEI_COST": 40000000000000000,
-  "DISPLAY_COST": 4,
-  "GAS_LIMIT": 285000,
-  "MARKETPLACE": "Opeansea",
+  "DISPLAY_COST": 0.04,
+  "GAS_LIMIT": 3000000,
+  "MARKETPLACE": "HighperDao Market place",
   "MARKETPLACE_LINK": "https://opensea.io/collection/the-stripes-nft",
   "SHOW_BACKGROUND": true
 }
